--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Xiaohan Ma - Ph.D. Candidate in Astronomy at Boston University | Research on Plasma Instabilities and Turbulence in Heliosphere">
     <meta name="keywords" content="Xiaohan Ma, Astronomy, Plasma Physics, Heliosphere, MHD Simulations, Boston University">
     <title>Xiaohan Ma - Academic Homepage</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="sheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-wrapper">
-                        <img src="images/profile.jpg" alt="Xiaohan Ma" onerror="this.style.display='none'">
+                        <img src="images/profile.jpg" alt="Xiaohan Ma" onerror="this..display='none'">
                         <div class="image-decoration"></div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                 <div class="publications-list">
                     <article class="publication-item">
                         <div class="publication-thumbnail">
-                            <img src="images/paper-apj-2025.png" alt="Paper 2025" onerror="this.style.display='none'">
+                            <img src="images/paper-apj-2025.png" alt="Paper 2025" onerror="this..display='none'">
                         </div>
                         <div class="publication-content">
                             <h3 class="publication-title">The Coupling and Evolution of Kelvin–Helmholtz and Rayleigh–Taylor Instabilities in the Heliosheath</h3>
@@ -139,7 +139,7 @@
                     </article>
                     <article class="publication-item">
                         <div class="publication-thumbnail">
-                            <img src="images/paper-apj-2024.png" alt="Paper 2024" onerror="this.style.display='none'">
+                            <img src="images/paper-apj-2024.png" alt="Paper 2024" onerror="this..display='none'">
                         </div>
                         <div class="publication-content">
                             <h3 class="publication-title">Instabilities along the Axis of the Heliospheric Jets</h3>
