--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系方式 - [你的姓名]</title>
+    <title>Contact - Xiaohan Ma</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">[你的姓名]</a>
+            <a href="index.html" class="logo">Xiaohan Ma</a>
             <ul class="nav-menu">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="research.html">研究</a></li>
-                <li><a href="publications.html">出版物</a></li>
-                <li><a href="cv.html">简历</a></li>
-                <li><a href="contact.html" class="active">联系</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
             <button class="nav-toggle">
                 <span></span>
@@ -29,73 +29,79 @@
     <main class="main-content page-content">
         <div class="container contact-container">
             <header class="page-header">
-                <h1>联系我</h1>
+                <h1>Contact Me</h1>
                 <p class="page-intro">
-                    欢迎与我讨论潜在的研究合作、学术交流或职位机会。
+                    I welcome discussions about potential research collaborations, academic exchanges, 
+                    or postdoctoral opportunities.
                 </p>
             </header>
 
             <div class="contact-grid">
-                <!-- 联系信息 -->
+                <!-- Contact Information -->
                 <div class="contact-info">
                     <div class="contact-card">
                         <div class="contact-icon">📧</div>
-                        <h3>电子邮件</h3>
-                        <p><a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
-                        <p class="note">这是联系我的最佳方式，我通常会在1-2个工作日内回复。</p>
+                        <h3>Email</h3>
+                        <p><a href="mailto:xhma@bu.edu">xhma@bu.edu</a></p>
+                        <p class="note">This is the best way to reach me. I typically respond within 1-2 business days.</p>
                     </div>
 
                     <div class="contact-card">
                         <div class="contact-icon">🏢</div>
-                        <h3>办公地址</h3>
-                        <p>[建筑名称], 房间 [房间号]</p>
-                        <p>[系所名称]</p>
-                        <p>[大学名称]</p>
-                        <p>[完整邮政地址]</p>
+                        <h3>Office Address</h3>
+                        <p>Center for Space Physics</p>
+                        <p>Department of Astronomy</p>
+                        <p>Boston University</p>
+                        <p>725 Commonwealth Avenue</p>
+                        <p>Boston, MA 02215, USA</p>
                     </div>
 
                     <div class="contact-card">
-                        <div class="contact-icon">📞</div>
-                        <h3>电话</h3>
-                        <p>+[国家代码] [电话号码]</p>
-                        <p class="note">如有急事可以致电，但建议先通过邮件联系。</p>
-                    </div>
-
-                    <div class="contact-card">
-                        <div class="contact-icon">🕐</div>
-                        <h3>Office Hours</h3>
-                        <p>每周[星期X] [时间段]</p>
-                        <p>或通过邮件预约</p>
+                        <div class="contact-icon">🎓</div>
+                        <h3>Academic Status</h3>
+                        <p><strong>Ph.D. Candidate</strong></p>
+                        <p>Expected Graduation: 2025</p>
+                        <p>Advisor: Prof. Merav Opher</p>
+                        <p class="note">Currently seeking postdoctoral positions</p>
                     </div>
                 </div>
 
-                <!-- 学术档案链接 -->
+                <!-- Academic Profiles -->
                 <div class="academic-profiles">
-                    <h2>学术档案</h2>
+                    <h2>Academic Profiles</h2>
                     <div class="profiles-list">
-                        <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank" class="profile-link-large">
-                            <div class="profile-icon">📚</div>
-                            <div class="profile-content">
-                                <h4>Google Scholar</h4>
-                                <p>查看我的出版物和引用统计</p>
-                            </div>
-                            <span class="arrow">→</span>
-                        </a>
-
-                        <a href="https://orcid.org/YOUR_ORCID" target="_blank" class="profile-link-large">
+                        <a href="https://orcid.org/0000-0003-0007-757X" target="_blank" class="profile-link-large">
                             <div class="profile-icon">🆔</div>
                             <div class="profile-content">
                                 <h4>ORCID</h4>
-                                <p>XXXX-XXXX-XXXX-XXXX</p>
+                                <p>0000-0003-0007-757X</p>
                             </div>
                             <span class="arrow">→</span>
                         </a>
 
-                        <a href="https://www.researchgate.net/profile/Your_Profile" target="_blank" class="profile-link-large">
+                        <a href="https://scholar.google.com" target="_blank" class="profile-link-large">
+                            <div class="profile-icon">📚</div>
+                            <div class="profile-content">
+                                <h4>Google Scholar</h4>
+                                <p>View my publications and citation metrics</p>
+                            </div>
+                            <span class="arrow">→</span>
+                        </a>
+
+                        <a href="https://ui.adsabs.harvard.edu" target="_blank" class="profile-link-large">
+                            <div class="profile-icon">🔭</div>
+                            <div class="profile-content">
+                                <h4>NASA ADS</h4>
+                                <p>Astrophysics publications and citations</p>
+                            </div>
+                            <span class="arrow">→</span>
+                        </a>
+
+                        <a href="https://www.researchgate.net" target="_blank" class="profile-link-large">
                             <div class="profile-icon">🔬</div>
                             <div class="profile-content">
                                 <h4>ResearchGate</h4>
-                                <p>学术网络和合作</p>
+                                <p>Academic network and collaborations</p>
                             </div>
                             <span class="arrow">→</span>
                         </a>
@@ -104,16 +110,7 @@
                             <div class="profile-icon">💻</div>
                             <div class="profile-content">
                                 <h4>GitHub</h4>
-                                <p>代码和开源项目</p>
-                            </div>
-                            <span class="arrow">→</span>
-                        </a>
-
-                        <a href="https://twitter.com/yourusername" target="_blank" class="profile-link-large">
-                            <div class="profile-icon">🐦</div>
-                            <div class="profile-content">
-                                <h4>Twitter/X</h4>
-                                <p>研究动态和学术讨论</p>
+                                <p>Code and research software</p>
                             </div>
                             <span class="arrow">→</span>
                         </a>
@@ -122,7 +119,7 @@
                             <div class="profile-icon">💼</div>
                             <div class="profile-content">
                                 <h4>LinkedIn</h4>
-                                <p>专业网络</p>
+                                <p>Professional network</p>
                             </div>
                             <span class="arrow">→</span>
                         </a>
@@ -130,58 +127,43 @@
                 </div>
             </div>
 
-            <!-- 合作机会 -->
+            <!-- Collaboration Opportunities -->
             <section class="collaboration-section">
-                <h2 class="section-title">合作机会</h2>
+                <h2 class="section-title">Collaboration Opportunities</h2>
                 <div class="collaboration-cards">
                     <div class="collab-card">
-                        <h3>🔬 研究合作</h3>
+                        <h3>🔬 Research Collaboration</h3>
                         <p>
-                            我对跨学科合作持开放态度，特别是在[具体领域]方面。
-                            如果你有相关的研究想法或项目，欢迎联系我讨论。
+                            I am open to interdisciplinary collaborations, particularly in areas related to 
+                            plasma instabilities, MHD simulations, and heliospheric physics. If you have 
+                            relevant research ideas or projects, please feel free to reach out.
                         </p>
                     </div>
                     <div class="collab-card">
-                        <h3>👥 指导学生</h3>
+                        <h3>📄 Postdoctoral Positions</h3>
                         <p>
-                            我目前[正在/不在]寻找研究生或访问学者。
-                            如果你对我的研究感兴趣并希望加入我的团队，请发送简历和研究兴趣说明。
+                            I am actively seeking postdoctoral positions starting in 2025. My expertise 
+                            includes 3D MHD simulations, plasma physics, and data analysis. I am interested 
+                            in positions related to space physics, astrophysics, or computational plasma physics.
                         </p>
                     </div>
                     <div class="collab-card">
-                        <h3>🎤 演讲邀请</h3>
+                        <h3>🎤 Seminar Invitations</h3>
                         <p>
-                            我乐意在研讨会、会议或学术活动中分享我的研究成果。
-                            请通过邮件联系我讨论可能的演讲主题和日程安排。
+                            I am available to give seminars or presentations at conferences and academic 
+                            institutions. Topics include heliospheric instabilities, plasma turbulence, 
+                            and MHD modeling techniques.
                         </p>
                     </div>
                     <div class="collab-card">
-                        <h3>📝 审稿与编辑</h3>
+                        <h3>📝 Peer Review</h3>
                         <p>
-                            我可以为[相关领域]的期刊和会议提供审稿服务。
-                            如需邀请我担任审稿人或编辑，请通过邮件联系。
+                            I am available to review manuscripts in the fields of space physics, 
+                            heliospheric physics, magnetospheric dynamics, and computational plasma physics 
+                            for relevant journals and conferences.
                         </p>
                     </div>
                 </div>
-            </section>
-
-            <!-- 地图 (可选) -->
-            <section class="map-section">
-                <h2 class="section-title">办公地点</h2>
-                <div class="map-container">
-                    <!-- 可以嵌入 Google Maps -->
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=YOUR_EMBED_URL"
-                        width="100%" 
-                        height="400" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy">
-                    </iframe>
-                </div>
-                <p class="map-note">
-                    📍 [大学校区名称] - [建筑名称]在校园的[方位]
-                </p>
             </section>
         </div>
     </main>
@@ -190,22 +172,24 @@
         <div class="container footer-container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4>联系方式</h4>
-                    <p>📧 your.email@university.edu</p>
-                    <p>🏢 [办公室地址]</p>
+                    <h4>Contact</h4>
+                    <p>📧 xhma@bu.edu</p>
+                    <p>🏢 Center for Space Physics<br>
+                       Department of Astronomy<br>
+                       Boston University</p>
                 </div>
                 <div class="footer-section">
-                    <h4>学术档案</h4>
+                    <h4>Academic Profiles</h4>
                     <p><a href="https://scholar.google.com" target="_blank">Google Scholar</a></p>
-                    <p><a href="https://orcid.org" target="_blank">ORCID</a></p>
+                    <p><a href="https://orcid.org/0000-0003-0007-757X" target="_blank">ORCID</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 [你的姓名]</p>
+                <p>&copy; 2024 Xiaohan Ma</p>
             </div>
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
