--- a/research.html
+++ b/research.html
@@ -241,7 +241,7 @@
                     </div>
                     <div class="project-body">
                         <div class="project-image">
-                            <img src="images/heliospheric-jets.png" alt="Heliospheric jets instabilities" onerror="this.style.display='none'">
+                            <img src="images/Paper1.png" alt="Heliospheric jets instabilities" onerror="this.style.display='none'">
                         </div>
                         <div class="project-content">
                             <div class="project-overview-box">
