--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <div class="publications-list">
                     <article class="publication-item">
                         <div class="publication-thumbnail">
-                            <img src="images/paper-apj-2025.png" alt="Paper 2025" onerror="this.style.display='none'">
+                            <img src="images/Paper1.png" alt="Paper 2025" onerror="this.style.display='none'">
                         </div>
                         <div class="publication-content">
                             <h3 class="publication-title">The Coupling and Evolution of Kelvin–Helmholtz and Rayleigh–Taylor Instabilities in the Heliosheath</h3>
@@ -386,7 +386,7 @@
                     </article>
                     <article class="publication-item">
                         <div class="publication-thumbnail">
-                            <img src="images/paper-apj-2024.png" alt="Paper 2024" onerror="this.style.display='none'">
+                            <img src="images/Paper2.png" alt="Paper 2024" onerror="this.style.display='none'">
                         </div>
                         <div class="publication-content">
                             <h3 class="publication-title">Instabilities along the Axis of the Heliospheric Jets</h3>
