--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Beyond Research - Xiaohan Ma's life outside academia">
     <title>Beyond Research - Xiaohan Ma</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile-nav-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;600&family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
