--- a/publications.html
+++ b/publications.html
@@ -17,8 +17,8 @@
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="research.html">Research</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="cv.html" class="active">Beyond Research</a></li>
+                <li><a href="publications.html" class="active">Publications</a></li>
+                <li><a href="cv.html">Beyond Research</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <button class="nav-toggle" aria-label="toggle navigation">
@@ -36,35 +36,6 @@
                 <p class="page-intro">
                     Below is a list of my academic publications. Papers where I am the <span class="author-highlight">first author</span> are marked in bold.
                 </p>
-                <div class="publication-stats">
-                    <div class="stat-item">
-                        <span class="stat-number">4</span>
-                        <span class="stat-label">Total Papers</span>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-number">4</span>
-                        <span class="stat-label">First Author</span>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-number">~50</span>
-                        <span class="stat-label">Citations</span>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-number">3</span>
-                        <span class="stat-label">h-index</span>
-                    </div>
-                </div>
-                <div class="external-profiles">
-                    <a href="https://scholar.google.com" target="_blank" class="profile-link">
-                        📚 Google Scholar
-                    </a>
-                    <a href="https://orcid.org/0000-0003-0007-757X" target="_blank" class="profile-link">
-                        🆔 ORCID: 0000-0003-0007-757X
-                    </a>
-                    <a href="https://ui.adsabs.harvard.edu" target="_blank" class="profile-link">
-                        🔭 NASA ADS
-                    </a>
-                </div>
             </header>
 
             <!-- Journal Articles -->
