--- a/research.html
+++ b/research.html
@@ -195,9 +195,9 @@
             <a href="index.html" class="logo">Xiaohan Ma</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
+                <li><a href="research.html" class="active">Research</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="cv.html" class="active">Beyond Research</a></li>
+                <li><a href="cv.html">Beyond Research</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <button class="nav-toggle" aria-label="toggle navigation">
