--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                         <div class="contact-icon">🎓</div>
                         <h3>Academic Status</h3>
                         <p><strong>Ph.D. Candidate</strong></p>
-                        <p>Expected Graduation: 2025</p>
+                        <p>Expected Graduation: 2026 May</p>
                         <p>Advisor: Prof. Merav Opher</p>
                         <p class="note">Currently seeking postdoctoral positions</p>
                     </div>
@@ -80,7 +80,7 @@
                             <span class="arrow">→</span>
                         </a>
 
-                        <a href="https://scholar.google.com" target="_blank" class="profile-link-large">
+                        <a href="https://scholar.google.com/citations?user=zW1oDKIAAAAJ&hl=en" target="_blank" class="profile-link-large">
                             <div class="profile-icon">📚</div>
                             <div class="profile-content">
                                 <h4>Google Scholar</h4>
@@ -89,34 +89,8 @@
                             <span class="arrow">→</span>
                         </a>
 
-                        <a href="https://ui.adsabs.harvard.edu" target="_blank" class="profile-link-large">
-                            <div class="profile-icon">🔭</div>
-                            <div class="profile-content">
-                                <h4>NASA ADS</h4>
-                                <p>Astrophysics publications and citations</p>
-                            </div>
-                            <span class="arrow">→</span>
-                        </a>
 
-                        <a href="https://www.researchgate.net" target="_blank" class="profile-link-large">
-                            <div class="profile-icon">🔬</div>
-                            <div class="profile-content">
-                                <h4>ResearchGate</h4>
-                                <p>Academic network and collaborations</p>
-                            </div>
-                            <span class="arrow">→</span>
-                        </a>
-
-                        <a href="https://github.com/yourusername" target="_blank" class="profile-link-large">
-                            <div class="profile-icon">💻</div>
-                            <div class="profile-content">
-                                <h4>GitHub</h4>
-                                <p>Code and research software</p>
-                            </div>
-                            <span class="arrow">→</span>
-                        </a>
-
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank" class="profile-link-large">
+                        <a href="https://www.linkedin.com/in/xiaohan-ma-ba9631242/" target="_blank" class="profile-link-large">
                             <div class="profile-icon">💼</div>
                             <div class="profile-content">
                                 <h4>LinkedIn</h4>
@@ -127,45 +101,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Collaboration Opportunities -->
-            <section class="collaboration-section">
-                <h2 class="section-title">Collaboration Opportunities</h2>
-                <div class="collaboration-cards">
-                    <div class="collab-card">
-                        <h3>🔬 Research Collaboration</h3>
-                        <p>
-                            I am open to interdisciplinary collaborations, particularly in areas related to 
-                            plasma instabilities, MHD simulations, and heliospheric physics. If you have 
-                            relevant research ideas or projects, please feel free to reach out.
-                        </p>
-                    </div>
-                    <div class="collab-card">
-                        <h3>📄 Postdoctoral Positions</h3>
-                        <p>
-                            I am actively seeking postdoctoral positions starting in 2025. My expertise 
-                            includes 3D MHD simulations, plasma physics, and data analysis. I am interested 
-                            in positions related to space physics, astrophysics, or computational plasma physics.
-                        </p>
-                    </div>
-                    <div class="collab-card">
-                        <h3>🎤 Seminar Invitations</h3>
-                        <p>
-                            I am available to give seminars or presentations at conferences and academic 
-                            institutions. Topics include heliospheric instabilities, plasma turbulence, 
-                            and MHD modeling techniques.
-                        </p>
-                    </div>
-                    <div class="collab-card">
-                        <h3>📝 Peer Review</h3>
-                        <p>
-                            I am available to review manuscripts in the fields of space physics, 
-                            heliospheric physics, magnetospheric dynamics, and computational plasma physics 
-                            for relevant journals and conferences.
-                        </p>
-                    </div>
-                </div>
-            </section>
         </div>
     </main>
 
