--- a/cv.html
+++ b/cv.html
@@ -852,8 +852,7 @@
             <header class="page-header">
                 <h1>Beyond Research</h1>
                 <p class="section-intro">
-                    While my academic work focuses on plasma physics and heliospheric dynamics, I believe that a fulfilling life extends far beyond the laboratory and research papers. Here, I share the experiences, passions, and pursuits that shape who I am outside of academia—from leading teams and building communities to exploring sports, arts, and creative projects.
-                </p>
+                I believe that a fulfilling life goes far beyond research and academic papers. This space reflects the experiences, passions, and pursuits that shape who I am beyond academia—from leading teams and building communities to exploring sports, art, and creative projects. My life motto is “Carpe Diem.”                </p>
                 
                 <!-- Philosophy -->
                 <div class="philosophy-box">
@@ -886,7 +885,7 @@
                         <h3 class="timeline-title">Event Coordinator | PKU-AANE, Graduate Union & Kendo Club</h3>
                         <ul class="timeline-achievements">
                             <li>Orchestrated cross-departmental teams to deliver large-scale events (e.g., New Year Gala, annual meetings) with 300+ participants, enhancing event efficiency and stakeholder engagement.</li>
-                            <li>As Vice President, organized and oversaw the operations of kendo tournaments with 200 participants, enhancing the participant experience and ensuring smooth event execution.</li>
+                            <li>Organized and oversaw the operations of kendo tournaments with 200+ participants, enhancing the participant experience and ensuring smooth event execution.</li>
                         </ul>
                     </div>
                     
