--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@
         }
         
         .abstract-content.show {
-            display: block;
+            display: block; !important; 
         }
         
         /* Compact presentation item */
@@ -152,7 +152,7 @@
             <header class="page-header">
                 <h1>Publications</h1>
                 <p class="page-intro">
-                    Below is a list of my academic publications. Papers where I am the <span class="author-highlight">first author</span> are marked in bold.
+                    Below is a list of my academic publications.
                 </p>
             </header>
 
@@ -176,7 +176,7 @@
                                 <span class="impact-factor">IF: 4.9</span>
                             </p>
                             <div class="pub-links">
-                                <a href="https://doi.org/10.3847/1538-4357/ad9b9c" class="pub-link doi" target="_blank">
+                                <a href="https://doi.org/10.3847/1538-4357/ade881" class="pub-link doi" target="_blank">
                                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
                                         <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
@@ -210,7 +210,7 @@
                                 <span class="impact-factor">IF: 4.9</span>
                             </p>
                             <div class="pub-links">
-                                <a href="https://doi.org/10.3847/1538-4357/ad8b4c" class="pub-link doi" target="_blank">DOI</a>
+                                <a href="https://doi.org/10.3847/1538-4357/ad93a5" class="pub-link doi" target="_blank">DOI</a>
                             </div>
                             <div class="pub-abstract">
                                 <button class="abstract-toggle">Show Abstract ▼</button>
@@ -266,7 +266,7 @@
                                 <span class="impact-factor">IF: 2.8</span>
                             </p>
                             <div class="pub-links">
-                                <a href="https://doi.org/10.1029/2018JA026426" class="pub-link doi" target="_blank">DOI</a>
+                                <a href="https://doi.org/10.1029/2018JA026115" class="pub-link doi" target="_blank">DOI</a>
                             </div>
                             <div class="pub-abstract">
                                 <button class="abstract-toggle">Show Abstract ▼</button>
