--- a/contact.html
+++ b/contact.html
@@ -104,28 +104,35 @@
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <p>📧 xhma@bu.edu</p>
-                    <p>🏢 Center for Space Physics<br>
-                       Department of Astronomy<br>
+                    <p>🏢 Department of Astronomy<br>
                        Boston University</p>
                 </div>
                 <div class="footer-section">
                     <h4>Academic Profiles</h4>
-                    <p><a href="https://scholar.google.com" target="_blank">Google Scholar</a></p>
+                    <p><a href="https://scholar.google.com/" target="_blank">Google Scholar</a></p>
                     <p><a href="https://orcid.org/0000-0003-0007-757X" target="_blank">ORCID</a></p>
+                    
+                </div>
+                <div class="footer-section">
+                    <h4>Connect</h4>
+                    <p><a href="https://github.com/Xiao-Han-Ma" target="_blank">GitHub</a></p>
+                    <p><a href="https://www.linkedin.com/in/xiaohan-ma-ba9631242/" target="_blank">LinkedIn</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Xiaohan Ma</p>
+                <p>&copy; 2025 Xiaohan Ma. All rights reserved.</p>
+                <p>Last updated: December 2024</p>
             </div>
         </div>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
