--- a/cv.html
+++ b/cv.html
@@ -1110,7 +1110,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Academic Profiles</h4>
-                    <p><a href="https://scholar.google.com/" target="_blank">Google Scholar</a></p>
+                    <p><a href="https://scholar.google.com/citations?user=zW1oDKIAAAAJ&hl=en" target="_blank">Google Scholar</a></p>
                     <p><a href="https://orcid.org/0000-0003-0007-757X" target="_blank">ORCID</a></p>
                     
                 </div>
